--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
             <div data-wow-delay="0.3s" class="wow fadeIn"><p class="photoWomen"><img src="https://images.unsplash.com/photo-1542513217-0b0eedf7005d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDIwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60" alt="3photo" class="fourthPhoto"></p></div>
 
 
-            <div data-wow-delay="0.01s" class="wow fadeIn"><p class="Joanna">Joanna Smithbr is a Moscow<br>  born Photographer with polish <br>roots  who started  his career <br> in the fashion and <br> beauty industry early <br> on in front <br> of the lens. This gave him the <br>opportunity  to gain international <br>insight  and see the industry <br>from a different perspective.
-            </p></div>
+            <p class="Joanna">Joanna Smithbr is a Moscow<br>  born Photographer with polish <br>roots  who started  his career <br> in the fashion and <br> beauty industry early <br> on in front <br> of the lens. This gave him the <br>opportunity  to gain international <br>insight  and see the industry <br>from a different perspective.
+            </p><
 
-            <div data-wow-delay="0.2s" class="wow fadeIn"><p class="history">Photography is my passion. <br> When I had my son <br> six years ago I <br> bought my first DSLR <br> and fell in love! He <br> changed every day and the <br> best way to document <br> these changes was to capture <br> them in a photograph. <br> I haven’t put my camera <br> down since and now I feel <br> so honored to be photographing <br> other families and helping <br> them document their own memories. </p></div> 
+            <p class="history">Photography is my passion. <br> When I had my son <br> six years ago I <br> bought my first DSLR <br> and fell in love! He <br> changed every day and the <br> best way to document <br> these changes was to capture <br> them in a photograph. <br> I haven’t put my camera <br> down since and now I feel <br> so honored to be photographing <br> other families and helping <br> them document their own memories. </p>< 
 
             
              <p class="BackgroundTekst">About </p>
